# stocksalmon

./: .gitignore  README.md  fairness_demo.py  ml_machinelearninglandscape.ipynb  pyproject.toml  requirements.txt
fairness_presentation/: fairness_results.csv
functions/: __init__.py  fen_analyzer.py  functions.py
notebooks/: 00_fetch_data.ipynb  01_eda.ipynb  03_uva.ipynb  04_missing_values.ipynb  05_outliers.ipynb  06_correlations.ipynb  07_data_splitting.ipynb  cnn.ipynb  cnn_kaggle.ipynb  eda_01_structure.ipynb  eda_05_outliers.ipynb  eda_06_correlations.ipynb  eda_08_feature_materialization.ipynb  model_cnn_classification.ipynb  model_cnn_upgraded.ipynb
notebooks/eda/: eda_00_fetch_data.ipynb  eda_01_structure.ipynb  eda_02_univariate.ipynb  eda_07_data_splitting.ipynb
notebooks/progression_models/: model_cnn_active_500k.ipynb  model_cnn_refactor.ipynb  model_cnn_upgraded.ipynb
